@@ -1,3 +1,9 @@
+2008-10-27  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-editor.c
+		- Revert unintended checkin for read-only connections that snuck into
+			the previous commit
+
 2008-10-26  Dan Williams  <dcbw@redhat.com>
 
 	Patch from Jaap A. Haitsma <jaap@haitsma.org>
